tests/NormalTests/paczka1/fuzzy1/90530003.err
Error in line 21: H5Z A220 31,4
Error in line 33: H5Z A415 15,6
